# libmtp

./: .cvsignore  .gitignore  .travis-translate-pkgs  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.windows.txt  RELEASE-CHECKLIST.md  SECURITY.md  TODO  autogen.sh  configure.ac  hotplug.sh.in  libmtp.pc.in  libmtp.rules  libmtp.sh.in  libmtp.usermap  sync-usbids.sh
.github/workflows/: codeql.yml  main.yml
doc/: .cvsignore  .gitignore  Doxyfile.in  Makefile.am  examples.h  mainpage.h
examples/: .cvsignore  .gitignore  Makefile.am  albumart.c  albums.c  common.h  connect.c  connect.h  delfile.c  deltr.c  detect.c  emptyfolders.c  evolution-sync.sh  files.c  filetree.c  folders.c  format.c  getfile.c  getplaylist.c  gettr.c  hotplug.c  newfolder.c  newplaylist.c  pathutils.c  pathutils.h  playlists.c  refactortest.c  reset.c  sendfile.c  sendtr.c  thumb.c  tracks.c  trexist.c  util.c  util.h
logs/: README.TXT  gigabeat1.html  lsusb-canon-canoscan.txt  mtp-detect-Archos-Diamond-S.txt  mtp-detect-acer-a3-a40.txt  mtp-detect-acer-cloud-mobile-s500.txt  mtp-detect-acer-e350.txt  mtp-detect-acer-e380.txt  mtp-detect-acer-e39.txt  mtp-detect-acer-iconia-a1-810.txt  mtp-detect-acer-iconia-tab-a100-id2.txt  mtp-detect-acer-iconia-tab-a110.txt  mtp-detect-acer-iconia-tab-a200.txt  mtp-detect-acer-iconia-tab-a210.txt  mtp-detect-acer-iconia-tab-a500-v1.txt  mtp-detect-acer-iconia-tab-a500.txt  mtp-detect-acer-iconia-tab-a501.txt  mtp-detect-acer-iconia-tab-a510-id1.txt  mtp-detect-acer-iconia-tab-a510.txt  mtp-detect-acer-iconia-tab-a700.txt  mtp-detect-acer-liquid-e700.txt  mtp-detect-acer-liquid-z330.txt  mtp-detect-acer-liquid-zest-plus.txt  mtp-detect-acer-t07.txt  mtp-detect-acer-z150.txt  mtp-detect-acer-z200.txt  mtp-detect-acer-z220.txt  mtp-detect-alcatel-6030a.txt  mtp-detect-alcatel-997d-2.txt  mtp-detect-alcatel-997d.txt  mtp-detect-alcatel-one-touch-idol3.txt  mtp-detect-alcatel-one-touch.txt  mtp-detect-alcatel-one-touch2.txt  mtp-detect-amazon-fire-hd8-7th-gen.txt  mtp-detect-amazon-fire-hd8.txt  mtp-detect-amazon-fire-phone.txt  mtp-detect-amazon-kindle-fire-0012.txt  mtp-detect-amazon-kindle-fire-5.txt  mtp-detect-amazon-kindle-fire-7.txt  mtp-detect-amazon-kindle-fire-hd.txt  (+537 more)
m4/: byteorder.m4  iconv.m4  stdint.m4
src/: .cvsignore  .gitignore  Makefile.am  README  device-flags.h  gphoto2-sync.sh  libmtp.c  libmtp.h.in  libmtp.sym  libopenusb1-glue.c  libptp-endian.h  libusb-glue.c  libusb-glue.h  libusb1-glue.c  libusb1-glue.h  mtp-pack.c  mtp-pack.h  mtp-utils.c  mtp-utils.h  mtp.c  mtp.h  mtpz.c  mtpz.h  music-players.h  playlist-spl.c  playlist-spl.h  ptp-pack.c  ptp-pack.h  ptp.c  ptp.h  unicode.c  unicode.h  util.c  util.h
tests/: Makefile.am  testunicode.c
util/: .gitignore  Makefile.am  check_mtp_device.sh  mtp-hotplug.c  mtp-probe.c
